massive Beam update